[package]
name = "rosc"
version = "0.9.1"
authors = ["Andreas Linz <klingt.net@gmail.com>"]
description = "An OSC library for Rust"
keywords = ["audio", "osc"]
documentation = "https://docs.rs/rosc"
repository = "https://github.com/klingtnet/rosc"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
lints = ["clippy"]
std = []
default = ["std"]
serde = ["dep:serde"]
dhall = ["serde", "dep:serde_dhall"]

[dependencies]
byteorder = {version="1", default-features=false}
nom = { version="7", default-features=false, features=["alloc"] }
clippy = { version="^0", optional=true}
serde = { version="1", optional=true, features=["derive"]}
serde_dhall = { version="0.12.1", optional=true }
